--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,9 +8,11 @@ target 'ShopX' do
 
   use_react_native!(
     :path => config[:reactNativePath],
+    
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'ShopXTests' do
     inherit! :complete
