--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-dots-pagination": "^0.2.0",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
